// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link renders default correctly 1`] = `
<a
  class="Link__Component-di1hpm-0 buMmBA"
  href="www.google.com"
  target="__blank"
>
  <span
    class="Link__IconWrapper-di1hpm-1 zPDDJ"
  />
</a>
`;

exports[`Link renders with icon correctly 1`] = `
<a
  class="Link__Component-di1hpm-0 buMmBA"
  href="www.google.com"
  target="__blank"
>
  <span
    class="Link__IconWrapper-di1hpm-1 zPDDJ"
  >
    <svg>
      github-mark.svg
    </svg>
  </span>
</a>
`;
